# pylang2

./: .gitignore  print_ast.py  pyproject.toml
parser/: binding.gyp  grammar.js  index.js  package-lock.json  package.json  parser.exp  parser.lib
parser/src/: binding.cc  grammar.json  node-types.json  parser.c
parser/test/corpus/: definition_bin_integer.txt  definition_dec_integer.txt  definition_hex_integer.txt  definition_identifier.txt  definition_string.txt  function.txt  struct_with_multiple_types.txt  struct_with_one_type.txt
pylang2/: print_ast.py  tree_transformer.py
pylang2/assembler/: ast.py  bytecode_file.py  errors.py  grammar.lark  parser.py  passes.py  semantic_pass.py  symbol_table.py  typed_ast.py
pylang2/assembler/passes/: __init__.py  ast_pass.py  bindings_to_constants.py  calculate_addresses.py  calculate_addresses2.py  code_generation.py  index_symbols.py  phase2.py  print_ast.py  resolve_bindings.py  to_ast.py  to_pool_ast.py  to_symbol_table.py  to_symbol_table2.py  undefined_symbols.py
test/: test_assembler_parser.py
tests/: conftest.py  test_assembler_parser.py  test_ast.py  test_ast_pass.py  test_ast_virtual_machine.py  test_bindings_to_constants.py  test_calculate_addresses.py  test_resolve_bindings.py  test_semantic_pass.py  test_to_ast.py  test_to_symbol_ast.py  test_to_symbol_table.py  test_undefined_symbols.py
