[tool.poetry]
name = "pylang2"
version = "0.1.0"
description = ""
authors = ["Michael Caley <mjcaley@darkarctic.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
lark-parser = "^0.11"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
coverage = {extras = ["toml"], version = "^5.3"}
black = "^20.8b1"
pytest-mock = "^3.3.1"

[tool.poetry.scripts]
pylang2_print_ast = 'pylang2.print_ast:main'

[tool.coverage.run]
source = ["pylang2"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
